# rest_afaina

./: Cargo.toml  Dockerfile
src/: main.rs
