[package]
name = "rest_afaina"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
pretty_env_logger = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
warp = "0.3.7"
ollama-rs = "0.3.0"
axum = "0.6"
tower-http = { version = "0.3", features = ["cors"] }

[[bin]]
name = 'afaina_service'
path = "src/main.rs"
